02-VPC-subnet-fw-compute-instance/firewall.tf
resource "google_compute_firewall" "fw_ssh" {
  name = "fwrule-allow-ssh22"
  allow {
    ports = ["22"]
    protocol = "tcp"
  }
  direction = "INGRESS"
  network = google_compute_network.my_vpc.id
  priority = 1000
  source_ranges = ["0.0.0.0/0"]
  target_tags = ["ssh-tag"]
}

resource "google_compute_firewall" "fw_http" {
  name = "fwrule-allow-http80"
  allow {
    ports = ["80"]
    protocol = "tcp"
  }
  direction = "INGRESS"
  network = google_compute_network.my_vpc.id
  priority = 1000
  source_ranges = ["0.0.0.0/0"]
  target_tags = ["webserver-tag"]
}
